--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,23 @@
+alembic==1.0.0
+Authomatic==0.1.0.post1
 backcall==0.1.0
 bleach==2.1.3
+click==6.7
 cycler==0.10.0
 decorator==4.3.0
 Django==2.1
 entrypoints==0.2.3
+Flask==1.0.2
+Flask-Migrate==2.2.1
+Flask-SQLAlchemy==2.3.2
+Flask-WTF==0.14.2
 gprof2dot==2017.9.19
 html5lib==1.0.1
 ipykernel==4.8.2
 ipython==6.5.0
 ipython-genutils==0.2.0
 ipywidgets==7.4.0
+itsdangerous==0.24
 jedi==0.12.1
 Jinja2==2.10
 jsonschema==2.6.0
@@ -18,9 +26,15 @@ jupyter-client==5.2.3
 jupyter-console==5.2.0
 jupyter-core==4.4.0
 kiwisolver==1.0.1
+livereload==2.5.2
+lz4==2.1.0
+Mako==1.0.7
 MarkupSafe==1.0
 matplotlib==2.2.3
 mistune==0.8.3
+msgpack==0.5.6
+msgpack-numpy==0.4.3.1
+msgpack-python==0.5.6
 mypy==0.620
 nbconvert==5.3.1
 nbformat==4.4.0
@@ -32,18 +46,23 @@ pexpect==4.6.0
 pickleshare==0.7.4
 prometheus-client==0.3.1
 prompt-toolkit==1.0.15
+psycopg2==2.7.5
 ptyprocess==0.6.0
 pycallgraph==1.0.1
 Pygments==2.2.0
+pymongo==3.7.1
 pyparsing==2.2.0
 python-dateutil==2.7.3
+python-editor==1.0.3
 pytz==2018.5
 pyzmq==17.1.2
 qtconsole==4.4.0
+redis==2.10.6
 scipy==1.1.0
 Send2Trash==1.5.0
 simplegeneric==0.8.1
 six==1.11.0
+SQLAlchemy==1.2.11
 terminado==0.8.1
 testpath==0.3.1
 tornado==5.1
@@ -51,5 +70,6 @@ traitlets==4.3.2
 typed-ast==1.1.0
 wcwidth==0.1.7
 webencodings==0.5.1
+Werkzeug==0.14.1
 widgetsnbextension==3.4.0
-redis
+WTForms==2.2.1
