--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,10 @@ alembic==1.0.0
 Authomatic==0.1.0.post1
 backcall==0.1.0
 bleach==2.1.3
+certifi==2018.8.13
+chardet==3.0.4
 click==6.7
+coverage==4.5.1
 cycler==0.10.0
 decorator==4.3.0
 Django==2.1
@@ -12,7 +15,9 @@ Flask-Migrate==2.2.1
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
 gprof2dot==2017.9.19
+hiredis==0.2.0
 html5lib==1.0.1
+idna==2.7
 ipykernel==4.8.2
 ipython==6.5.0
 ipython-genutils==0.2.0
@@ -58,6 +63,8 @@ pytz==2018.5
 pyzmq==17.1.2
 qtconsole==4.4.0
 redis==2.10.6
+requests==2.19.1
+rq==0.12.0
 scipy==1.1.0
 Send2Trash==1.5.0
 simplegeneric==0.8.1
@@ -68,6 +75,7 @@ testpath==0.3.1
 tornado==5.1
 traitlets==4.3.2
 typed-ast==1.1.0
+urllib3==1.23
 wcwidth==0.1.7
 webencodings==0.5.1
 Werkzeug==0.14.1
