--- a/requirements.txt
+++ b/requirements.txt
@@ -47,6 +47,7 @@ notebook==5.6.0
 numpy==1.15.0
 pandocfilters==1.4.2
 parso==0.3.1
+pathtools==0.1.2
 pexpect==4.6.0
 pickleshare==0.7.4
 prometheus-client==0.3.1
@@ -74,6 +75,7 @@ terminado==0.8.1
 testpath==0.3.1
 tornado==5.1
 traitlets==4.3.2
+twitter==1.18.0
 typed-ast==1.1.0
 urllib3==1.23
 wcwidth==0.1.7
