--- a/requirements.txt
+++ b/requirements.txt
@@ -59,6 +59,7 @@ Pygments==2.2.0
 pymongo==3.7.1
 pyparsing==2.2.0
 python-dateutil==2.7.3
+python-dotenv==0.9.1
 python-editor==1.0.3
 pytz==2018.5
 pyzmq==17.1.2
