--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 alembic==1.0.0
+amqp==2.3.2
 Authomatic==0.1.0.post1
+Babel==2.6.0
 backcall==0.1.0
+billiard==3.5.0.4
 bleach==2.1.3
+celery==4.2.1
 certifi==2018.8.13
 chardet==3.0.4
 click==6.7
@@ -9,6 +13,8 @@ coverage==4.5.1
 cycler==0.10.0
 decorator==4.3.0
 Django==2.1
+django-babel==0.6.2
+django-prices==1.0.4
 entrypoints==0.2.3
 Flask==1.0.2
 Flask-Migrate==2.2.1
@@ -31,6 +37,7 @@ jupyter-client==5.2.3
 jupyter-console==5.2.0
 jupyter-core==4.4.0
 kiwisolver==1.0.1
+kombu==4.2.1
 livereload==2.5.2
 lz4==2.1.0
 Mako==1.0.7
@@ -41,17 +48,20 @@ msgpack==0.5.6
 msgpack-numpy==0.4.3.1
 msgpack-python==0.5.6
 mypy==0.620
+mysql-connector-python==8.0.12
 nbconvert==5.3.1
 nbformat==4.4.0
 notebook==5.6.0
 numpy==1.15.0
 pandocfilters==1.4.2
 parso==0.3.1
-pathtools==0.1.2
 pexpect==4.6.0
 pickleshare==0.7.4
+Pillow==5.2.0
+prices==1.0.0
 prometheus-client==0.3.1
 prompt-toolkit==1.0.15
+protobuf==3.6.1
 psycopg2==2.7.5
 ptyprocess==0.6.0
 pycallgraph==1.0.1
@@ -59,7 +69,6 @@ Pygments==2.2.0
 pymongo==3.7.1
 pyparsing==2.2.0
 python-dateutil==2.7.3
-python-dotenv==0.9.1
 python-editor==1.0.3
 pytz==2018.5
 pyzmq==17.1.2
@@ -76,9 +85,10 @@ terminado==0.8.1
 testpath==0.3.1
 tornado==5.1
 traitlets==4.3.2
-twitter==1.18.0
 typed-ast==1.1.0
+typing==3.6.6
 urllib3==1.23
+vine==1.1.4
 wcwidth==0.1.7
 webencodings==0.5.1
 Werkzeug==0.14.1
