--- a/examples/utils/parse-requirements-to-github-pages/requirements.txt
+++ b/examples/utils/parse-requirements-to-github-pages/requirements.txt
@@ -1,24 +1,36 @@
-arrow==0.12.1
-atomicwrites==1.1.5
-attrs==18.1.0
-binaryornot==0.4.4
-certifi==2018.4.16
-chardet==3.0.4
-click==6.7
-cookiecutter==1.6.0
-future==0.16.0
-idna==2.7
-Jinja2==2.10
-jinja2-time==0.2.0
-MarkupSafe==1.0
-more-itertools==4.3.0
-pluggy==0.7.1
-poyo==0.4.1
-py==1.5.4
+celery==4.1.0
+Django==1.11.6
+djangorestframework==3.7.3
+django-dirtyfields==1.3.1
+django-elasticsearch-dsl==0.4.1
+drfdocs==0.0.11
+elasticsearch-dsl>=5.0,<6.0
+freezegun==0.3.10
+tqdm==4.19.4
+psycopg2==2.7.3.2
+requests==2.18.4
+redis==2.10.6
+mysqlclient==1.3.12
+minio==3.0.0
+orator==0.9.4
+django-redis==4.8.0
+bleach==2.1.2
+raven==6.5.0
+factory_boy==2.11.1
+Faker==0.8.7
+coverage==4.5.1
+grpcio==1.11.0
+pendulum==1.4.2
+django-extensions==2.0.7
+newrelic==3.2.2.94
+kombu==4.1.0
+django-silk==3.0.1
 pytest==3.7.1
-pytest-cookies==0.3.0
-python-dateutil==2.7.3
-requests==2.19.1
-six==1.11.0
-urllib3==1.23
-whichcraft==0.4.1
+pytest-django==3.3.3
+pytest-cov==2.5.1
+pytest-factoryboy==2.0.1
+pytest-mock==1.10.0
+pytest-faker==2.0.0
+pytest-responses==0.3.0
+python-decouple==3.1
+gunicorn==19.9.0
